--- a/style.css
+++ b/style.css
@@ -37,11 +37,60 @@ html {
     /* vw é a porcentagem da LARGURA da tela */
     height: 100vh;
 
-    background-image: linear-gradient(90deg, rgba(53, 24, 104, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(img/bg-room.png);
     background-repeat: no-repeat;
 
     background-position: 165% 40%;
+
+    position: relative;
 }
+
+.primeiro-banner {
+
+    background-image: linear-gradient(90deg, rgba(53, 24, 104, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(img/bg-room.png);
+
+}
+
+.segundo-banner {
+
+    background-image: linear-gradient(90deg, rgba(24, 104, 36, 1) 0%, rgba(41, 104, 24, 0.8) 100%), url(img/bg-room.png);
+  
+}
+
+.terceiro-banner {
+
+    background-image: linear-gradient(90deg, rgb(209, 200, 39) 0%, rgba(182, 168, 14, 0.8) 100%), url(img/bg-room.png);
+
+}
+
+#botao-voltar , #botao-proximo {
+
+    width: 30px;
+
+    background: none;
+    border: none;
+    cursor: pointer;
+
+    position: absolute;
+}
+
+#botao-voltar svg , #botao-proximo svg {
+
+    fill: #ffffff76;
+
+}
+
+#botao-voltar {
+
+    left: 4%;
+
+}
+
+#botao-proximo {
+
+    right: 4%;
+}
+
+
 
 header {
     height: 165px;
@@ -468,6 +517,10 @@ footer .container-grid {
 }
 
 .menu-fechado{
+    display: none;
+}
+
+#icone-barras {
     display: none;
 }
 
