--- a/style.css
+++ b/style.css
@@ -46,19 +46,19 @@ html {
 
 .primeiro-banner {
 
-    background-image: linear-gradient(90deg, rgba(53, 24, 104, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(img/bg-room.png);
+    background-image: linear-gradient(90deg, rgba(53, 24, 104, 1) 0%, rgba(90, 19, 213, 0.8) 100%), url(img/bg-room.png);
 
 }
 
 .segundo-banner {
 
-    background-image: linear-gradient(90deg, rgba(24, 104, 36, 1) 0%, rgba(41, 104, 24, 0.8) 100%), url(img/bg-room.png);
+    background-image: linear-gradient(90deg, rgb(90, 19, 213, 0.8) 0%, rgba(255, 138, 22, 0.8) 100%), url(img/bg-room.png);
   
 }
 
 .terceiro-banner {
 
-    background-image: linear-gradient(90deg, rgb(209, 200, 39) 0%, rgba(182, 168, 14, 0.8) 100%), url(img/bg-room.png);
+    background-image: linear-gradient(90deg, rgb(255, 138, 0.8) 0%, rgba(207, 76, 0, 0.8) 100%), url(img/bg-room.png);
 
 }
 
@@ -90,7 +90,33 @@ html {
     right: 4%;
 }
 
+.botoes {
+    width: 150px;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    position: absolute;
+    bottom: 4%;
+
+    left: calc(50% - 75px);
+}
+
+.botoes button {
+
+    width: 30px;
+
+    display: unset;
+
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.botoes button svg {
+    fill: #ffffff76;
+}
 
 header {
     height: 165px;
