--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Montserrat";
-    src: url(fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
+    src: url(fonts/Montserrat-VariableFont_wght.ttf);
 }
 
 :root {
@@ -45,48 +45,37 @@ html {
 }
 
 .primeiro-banner {
-
-    background-image: linear-gradient(90deg, rgba(53, 24, 104, 1) 0%, rgba(90, 19, 213, 0.8) 100%), url(img/bg-room.png);
-
+    background-image: linear-gradient(90deg, rgba(53, 24, 104, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(img/bg-room.png);
 }
 
 .segundo-banner {
-
-    background-image: linear-gradient(90deg, rgb(90, 19, 213, 0.8) 0%, rgba(255, 138, 22, 0.8) 100%), url(img/bg-room.png);
-  
+    background-image: linear-gradient(90deg, rgba(24, 104, 36, 1) 0%, rgba(24, 104, 36, 0.8) 100%), url(img/bg-room.png);
 }
 
 .terceiro-banner {
-
-    background-image: linear-gradient(90deg, rgb(255, 138, 0.8) 0%, rgba(207, 76, 0, 0.8) 100%), url(img/bg-room.png);
-
+    background-image: linear-gradient(90deg, rgba(104, 24, 48, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(img/bg-room.png);
 }
 
-#botao-voltar , #botao-proximo {
-
+#botao-voltar, #botao-proximo {
     width: 30px;
 
     background: none;
     border: none;
+
     cursor: pointer;
 
     position: absolute;
 }
 
-#botao-voltar svg , #botao-proximo svg {
-
+#botao-voltar svg, #botao-proximo svg {
     fill: #ffffff76;
-
 }
 
 #botao-voltar {
-
     left: 4%;
-
 }
 
 #botao-proximo {
-
     right: 4%;
 }
 
@@ -100,11 +89,13 @@ html {
     position: absolute;
     bottom: 4%;
 
-    left: calc(50% - 75px);
+    /* Centralizar usando position */
+    /* Adicionar left 50% */
+    /* Usar função calc() para subtrair metade da largura do elemento Ex.: 75px */
+    left: calc(50% - 75px);    
 }
 
 .botoes button {
-
     width: 30px;
 
     display: unset;
@@ -124,6 +115,7 @@ header {
 
 header button {
     display: none;
+    cursor: pointer;
 }
 
 header img {
@@ -154,7 +146,7 @@ header .container-grid {
     text-decoration: underline transparent;
     text-decoration-thickness: 2px;
 
-    transition: text-decoration 500ms ease;
+    transition: text-decoration 500ms ease;    
 }
 
 .menu a:hover {
@@ -183,13 +175,13 @@ header .container-grid {
     border-right: 5px solid var(--laranja-gamifica);
     white-space: nowrap;
 
-    animation:
+    animation: 
         digitando 2s steps(40, end),
-        cursor 0.75s step-end infinite;
+        cursor 0.75s step-end infinite
+    ;
 }
 
 @keyframes digitando {
-
     from {
         width: 0;
     }
@@ -197,11 +189,9 @@ header .container-grid {
     to {
         width: 100%;
     }
-
 }
 
 @keyframes cursor {
-
     from,
     to {
         border-color: transparent;
@@ -267,7 +257,7 @@ h2 {
 
     background-color: var(--roxo-gamifica);
 
-    border-radius: 4px;
+    border-radius: 4px; 
 
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
@@ -349,8 +339,8 @@ h2 {
 #portfolio a {
     width: fit-content;
 
-    color: white;
-
+    color: white;  
+    
     font-family: "Anta";
     font-size: 28px;
 
@@ -445,21 +435,18 @@ h2 {
     resize: none;
 }
 
-.campo label,
-.campo-descricao label {
+.campo label, .campo-descricao label {
     margin-bottom: 15px;
 }
 
-.campo input,
-.campo-descricao textarea {
-
+.campo input, .campo-descricao textarea {
     font-family: "Montserrat";
     font-size: 17px;
 }
 
 .campo input::placeholder,
 .campo-descricao textarea::placeholder {
-    color: #b9b9b9;
+    color: #a0a0a0;
 }
 
 .campo input:focus,
@@ -468,25 +455,24 @@ h2 {
 }
 
 #contato form button {
-
     height: 40px;
     width: 60%;
 
     background-color: var(--laranja-gamifica);
     color: white;
+
     border: none;
     border-radius: 4px;
 
     font-size: 17px;
     font-family: "Montserrat";
-    font-weight: 700;
+    font-weight: 700; /* Bold */
 
     text-transform: uppercase;
 
     cursor: pointer;
 
     transition: background-color 500ms;
-
 }
 
 #contato form button:hover {
@@ -494,12 +480,9 @@ h2 {
 }
 
 footer {
-
     height: 290px;
 
     background-color: var(--roxo-gamifica);
-
-
 }
 
 footer .container-grid {
@@ -508,12 +491,11 @@ footer .container-grid {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .redes-sociais {
     height: 50%;
-
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -522,6 +504,7 @@ footer .container-grid {
 
 .redes-sociais p {
     color: #fff;
+
     font-family: "Anta";
     font-size: 24px;
 }
@@ -538,11 +521,14 @@ footer .container-grid {
 }
 
 .icones-redes a:hover {
-
     color: var(--laranja-gamifica);
 }
 
-.menu-fechado{
+/* OK - Scroll nos links */
+/* OK - Favicon */
+/* Animação do banner */
+
+.menu-fechado {
     display: none;
 }
 
@@ -550,10 +536,7 @@ footer .container-grid {
     display: none;
 }
 
-
-
 @media screen and (max-width: 1300px) {
-
     header {
         position: relative;
     }
@@ -570,7 +553,7 @@ footer .container-grid {
     header svg {
         fill: white;
     }
-
+    
     nav.menu {
         height: 500px;
         width: 350px;
@@ -580,17 +563,15 @@ footer .container-grid {
         flex-direction: column;
         justify-content: space-around;
 
-        background-color: #000000b5;
+        background-color: #000000da;
 
         position: absolute;
         top: 165px;
         right: 0px;
     }
 
-
     #sobre {
         padding: 100px 15%;
-
     }
 
     .card {
@@ -601,207 +582,8 @@ footer .container-grid {
     #contato form {
         width: 75%;
     }
-
 }
 
 @media screen and (max-width: 1080px) {
-
-    .container-cards {
-
-        flex-wrap: wrap;
-
-    }
-
-    .card {
-
-        height: 400px;
-
-        flex-grow: 0;
-        flex-shrink: 0;
-        flex-basis: 40%;
-
-    }
-
-    footer {
-
-        height: unset;
-    }
-
-    footer .container-grid {
-
-        padding: 80px;
-        flex-direction: column;
     
-    }
-
-    footer img {
-
-        margin-bottom: 100px;
-
-    }
-
-    footer p {
-
-        width: 100%;
-        text-align: center;
-        margin-bottom: 40px;
-
-    }
-
-    .redes-sociais {
-        align-items: center;
-    }
-
-
-
-}
-
-@media screen and (max-width: 800px) {
-
-    .card {
-        flex-basis: 45%;
-    }
-    
-}
-    
-@media screen and (max-width: 700px) {
-    #sobre{
-        height: unset;
-        margin-bottom: 40px;
-    }
-
-    #sobre h2 {
-        margin-bottom: 50px;
-
-    }
-
-    #sobre p {
-        margin-bottom: 30px;
-    }
-
-    #cases, #contato {
-
-        margin-bottom: unset;
-
-    }
-
-    #portfolio a{
-        width: 100%;
-        text-align: center;
-    }
-    
-    .campo, .campo-descricao, #contato form button {
-
-        width: 75%;
-    }
-
-    .banner {
-        background-size: cover;
-    } 
-
-}
-
-@media screen and (max-width: 520px) {
-    .container-grid{
-        width: 90%;
-    } 
-    
-    header img {
-        width: 200px;
-    }
-    
-    .banner {
-        background-size: cover;
-    } 
-
-    .conteudo-banner p {
-        font-size: 24px;
-    }
-
-    nav.menu{ 
-        width: 100%;
-        display: none;
-    }
-
-    #sobre{
-        padding-right: 0px;
-        padding-left: 0px;
-
-    }
-
-    #sobre p {
-        width: 90%;
-        margin: 0 auto;
-        margin-bottom: 20px;
-    }
-
-    #cases.container-grid{
-
-          width: 100%;
-          margin: unset;
-    }
-
-    .container-cards{
-
-        flex-wrap: nowrap;
-
-        gap: 40px;
-
-        overflow-x: auto;
-    }
-
-    .card {
-        height: 400px;
-        width: 280px;
-
-        flex-basis: unset;
-    }
-
-    .card:first-child{
-        margin-left: 30px;
-    }
-
-    .card:last-child{
-        margin-right: 30px;
-    }
-
-    #portfolio {
-
-        margin-bottom: 0;
-    }
-
-    #contato{
-        padding-top: 150px;
-
-        background-color: var(--roxo-gamifica);
-        color: white;
-    }
-
-    #contato h2 {
-        margin-bottom: 0;
-    }
-
-    #contato form{
-        width: 100%;
-        border-radius: 0;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    header img {
-        width: 160px;
-    }    
-
-    header svg {
-        width: 40px;
-    }
-
-    .conteudo-banner p {
-        font-size: 20px;
-    }
-
-    footer img {
-        width: 200px;
-        
-    }
 }
